# aevum

./: .gitignore  README.md  main.py  metrics.py  pyproject.toml
algorithms/: fcfs.py
src/aevum/: __init__.py  base.py  core.py  policies.py  visualizer.py
src/vance/: __init__.py  core.py  engine.py  policies.py  types.py  visualizer.py
