[build-system]
requires = ["uv_build >= 0.9.28, <0.10.0"]
build-backend = "uv_build"

[project]
name = "vance"
version = "0.1.1"
authors = [
	{name="John Manuel P. Carado", email="carado.johnp11q@gmail.com"}
]
description = "A Python CPU scheduling simulation package"
readme = "README.md"
requires-python = ">=3.9"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license="MIT"
license-files=["LICEN[CS]E*"]
[project.urls]
Homepage="https://github.com/hydraadra112/aevum"
Issues = "https://github.com/hydraadra112/aevum/issues"

